--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+
 }
