--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         applicationId "com.release.virtualinstructor"
         minSdkVersion 21
         targetSdkVersion 29
+        ndk.abiFilters 'arm64-v8a'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -29,5 +30,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation(name: 'gvr-keyboard', ext: 'aar')
+    implementation(name: 'gvr-keyboardsupport-release', ext: 'aar')
+    implementation(name: 'gvr-permissionsupport-release', ext: 'aar')
+    implementation(name: 'gvr', ext: 'aar')
+    implementation(name: 'unitygvr', ext: 'aar')
+
+    implementation project(":Environment")
 
 }
