--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.release.virtualinstructor"
         minSdkVersion 21
         targetSdkVersion 29
-        ndk.abiFilters 'arm64-v8a'
+        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
