--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation "androidx.cardview:cardview:1.0.0"
 
     implementation(name: 'gvr-keyboard', ext: 'aar')
