--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.release.virtualinstructor"
         minSdkVersion 21
         targetSdkVersion 29
-        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
+        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a'
         versionCode 2
         versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,11 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.vr:sdk-audio:1.180.0'
-    implementation 'com.google.vr:sdk-base:1.180.0'
-    implementation 'com.google.vr:sdk-videowidget:1.180.0'
-    implementation "com.google.vr:sdk-common:1.180.0"
-    implementation "com.google.vr:sdk-commonwidget:1.180.0"
 
 
 }
