--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,15 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.release.virtualinstructor"
         minSdkVersion 21
         targetSdkVersion 29
-        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a'
+        ndk.abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
         versionCode 2
         versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,7 +30,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
 //    implementation 'com.google.firebase:firebase-core:19.3.2'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     testImplementation 'junit:junit:4.12'
